--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.20.1",
+    "@sanity/image-url": "^1.0.2",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-sanity": "^9.4.2",
@@ -18,7 +19,8 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-spinners": "^0.14.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
